Firebase authenticate index.html

--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
  /* ------------------ Login Functionality ------------------ */
     <script type="module">
   // Import Firebase SDK (v11.3.1)
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
+  // ✅ Import Firebase SDK (Including getApps)
+  import { initializeApp, getApps } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
   import { getAuth, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js";
   import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js";
 
