Firebase authenticate index.html

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 </head>
 <body>
 
-/* ------------------ Login Functionality ------------------ */
+<! ------------------ Login Functionality ------------------ >
  <script type="module">
   // Import Firebase SDK (v11.3.1)
   // ✅ Import Firebase SDK (Including getApps)
