Firebase db index.html

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     location.reload(); // Refresh the page
   });
 
-  <! ...................UOM Management......................> 
+  //...................UOM Management......................
      // ✅ Fetch and Render UOM List from Firestore
   function renderUOMList() {
   onSnapshot(collection(db, "uom_list"), (snapshot) => {
