--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 }
    
    function renderUOMList(uomList) {
-  const ul = document.getElementById("uom-list");
+  const ul = document.getElementById("uom_list");
   ul.innerHTML = ""; // Clear existing list before updating
 
   uomList.forEach((uom) => {
